--- a/src/hpc-web/src/main/resources/templates/datahierarchyfragment.html
+++ b/src/hpc-web/src/main/resources/templates/datahierarchyfragment.html
@@ -17,6 +17,27 @@
 							th:if="${!#strings.isEmpty(entry.getDefaultValue()) and !entry.getMandatory() and #lists.contains(entry.getCollectionTypes(), hierarchy.collectionType)}"></div>
 					</div>
 				</div>
+				<div th:if="${hierarchy.isDataObjectContainer}">
+						<ul>
+				            <li>
+				                <a>DataObject</a>
+				                <a style="border:none" onclick="show(this)"><i title="Show mandatory metadata" class="fa fa-plus"></i></a>
+									<div style="display: none">
+										<div th:each="entry : ${dataObjectMetadata}"
+											th:if="${dataObjectMetadata != null}">
+											<div class="required" th:text="${entry.getAttribute()}"
+												th:if="${#strings.isEmpty(entry.getDefaultValue()) and entry.getMandatory() and #lists.contains(entry.getCollectionTypes(), hierarchy.collectionType)}"></div>
+											<div th:text="${entry.getAttribute()}"
+												th:if="${#strings.isEmpty(entry.getDefaultValue()) and !entry.getMandatory() and #lists.contains(entry.getCollectionTypes(), hierarchy.collectionType)}"></div>
+											<div class="required" th:text="${entry.getAttribute()} + ' (Default: ' + ${entry.getDefaultValue()} + ')'"
+												th:if="${!#strings.isEmpty(entry.getDefaultValue()) and entry.getMandatory() and #lists.contains(entry.getCollectionTypes(), hierarchy.collectionType)}"></div>
+											<div th:text="${entry.getAttribute()} + ' (Default: ' + ${entry.getDefaultValue()} + ')'"
+												th:if="${!#strings.isEmpty(entry.getDefaultValue()) and !entry.getMandatory() and #lists.contains(entry.getCollectionTypes(), hierarchy.collectionType)}"></div>
+										</div>
+									</div>
+				            </li>
+				        </ul>
+					</div>
                 <section th:include="@{datahierarchyfragment} :: hierarchy" th:with="hierarchyList=${hierarchy.subCollectionsHierarchies}"></section>
             </li>
         </ul> 
