--- a/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
@@ -119,6 +119,7 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
     columnDefs: [
 		 		 { field: 'userId', width:150, displayName: 'User ID', cellTemplate: '<div class="ui-grid-cell-contents" title="TOOLTIP">{{COL_FIELD CUSTOM_FILTERS}}</div>'  },
                  { field: 'taskId', minWidth:300, displayName: 'Task ID', cellTemplate: '<div class="ui-grid-cell-contents" title="TOOLTIP"><a href="uploadtask?taskId={{row.entity.taskId}}&amp;type={{row.entity.type}}">{{COL_FIELD CUSTOM_FILTERS}}</a></div>'  },
+                 { field: 'sourceType', width:150, displayName : 'Source Type'},
                  { field: 'result', width:200, displayName: 'Transfer Result'},
                  { field: 'created', width:200, displayName : 'Created On' },
                  { field: 'completed', width:200, displayName : 'Completed On'}
