Revert "HPCDATAMGM-1776: Do not show Source type if it is null"
This reverts commit 48080ea7552fadcd0492264bd2578521cac09bf5.

--- a/src/hpc-web/src/main/resources/templates/dataobjectsuploadtask.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectsuploadtask.html
@@ -91,7 +91,7 @@
 											for="${hpcBulkDataObjectRegistrationTaskDTO.getTaskId()}"
 											th:text="${hpcBulkDataObjectRegistrationTaskDTO.getTaskId()}"></label>
 									</div>
-									<div class="col-md-12 form-group" th:if="${hpcBulkDataObjectRegistrationTaskDTO.getUploadMethod() != null}">
+									<div class="col-md-12 form-group" th:if="${hpcBulkDataObjectRegistrationTaskDTO.getResult() != null}">
 										<label for="Name">Source Type:</label> <label id="sourceType"
 											for="${hpcBulkDataObjectRegistrationTaskDTO.getUploadMethod()}"
 											th:text="${hpcBulkDataObjectRegistrationTaskDTO.getUploadMethod()}"></label>
