--- a/src/hpc-web/src/main/resources/templates/downloadfiles.html
+++ b/src/hpc-web/src/main/resources/templates/downloadfiles.html
@@ -121,7 +121,7 @@
 						<tr><td>&nbsp;</td></tr>
 						<tr>
 							<td>
-							    <div th:if="${canDownload != 'true'}" class="alert alert-danger" th:text="${downloadSizeExceededMsg}"></div>
+							    <div th:if="${canDownload != 'true'}" class="alert alert-danger" th:utext="${downloadSizeExceededMsg}"></div>
 								<div class="alert alert-info pull-left" role="alert" id="message"
 									style="display: none; float: left">
 									<p>&nbsp;</p>
