--- a/src/hpc-web/src/main/resources/templates/footer.html
+++ b/src/hpc-web/src/main/resources/templates/footer.html
@@ -9,7 +9,7 @@
 				<li><a id="contactLink"
 					th:href="@{/}" tabindex="0">Home</a></li>
 				<li>|</li>
-				<li><a href="mailto:NCIDataVault@mail.nih.gov"
+				<li><a th:href="'mailto:'+${session.contactEmail}"
 					tabindex="0">Contact Us</a></li>
 				<li>|</li>
 				<li><a target="_blank" href="https://www.cancer.gov/policies"
