--- a/src/hpc-web/src/main/resources/templates/datahierarchy.html
+++ b/src/hpc-web/src/main/resources/templates/datahierarchy.html
@@ -31,7 +31,7 @@
 
 	<div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal">&times;</button>
-		<h4 class="modal-title">Valid Hierarchy and Mandatory/Optional Metadata</h4>
+		<h4 class="modal-title">Data Hierarchy and Metadata Structure</h4>
 	</div>
 	<div class="modal-body">
 	  <div th:if="${hierarchy != null}">
