--- a/src/hpc-web/src/main/resources/templates/updatemetadatabulk.html
+++ b/src/hpc-web/src/main/resources/templates/updatemetadatabulk.html
@@ -163,7 +163,7 @@
 				<div th:if="${paths != null and paths.size() > 0}">
 					<table id="pathgrid" class="display" style="width:100%">
 						<thead>
-							<tr id='attrRow0'>					
+							<tr id='attrRow0'>
 								<th class="column-heading" id='path0' th:text="Path"></th>
 							</tr>
 						</thead>
@@ -171,6 +171,22 @@
 							<tr id='attrCol0' th:each="path : ${paths}">
 							   
 							   <td id='path1' th:text="${path}"></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<div th:if="${pathDetails != null and pathDetails.size() > 0}">
+					<table id="pathDetailsGrid" class="display" style="width:100%">
+						<thead>
+							<tr id='attrRow0'>					
+								<th class="column-heading" id='path2' th:text="Path"></th>
+								<th class="column-heading" id='path21' th:text="Result"></th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr id='attrCol0' th:each="pathDetail : ${pathDetails}">
+								<td id='path3' th:text="${pathDetail.path}"></td>
+								<td id='path31' th:text="${pathDetail.result}"></td>
 							</tr>
 						</tbody>
 					</table>
@@ -209,6 +225,10 @@
 
 		$(document).ready(function () {
 			$('#pathgrid').DataTable();
+		});
+
+		$(document).ready(function () {
+			$('#pathDetailsgrid').DataTable();
 		});
 
 		function enableSave() {
