--- a/src/hpc-web/src/main/resources/templates/updatemetadatabulk.html
+++ b/src/hpc-web/src/main/resources/templates/updatemetadatabulk.html
@@ -101,7 +101,7 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<h4>
-							<i class="fa fa-dashboard"></i> Update Bulk Metadata
+							<i class="fa fa-edit"></i> Update Bulk Metadata
 						</h4>
 					</div>
 				</div>
@@ -140,8 +140,8 @@
 															</tr>
 														</thead>
 														<tbody><tr>
-															<td><input class="form-control" type="text" id="mdname" name="metadataName" placeholder="Enter Metadata attribute" th:value="${bulkMetadataUpdateRequest.getMetadataName()}" /></td>
-															<td><input class="form-control" type="text" id="mdval" name="metadataValue" placeholder="Enter Metadata value" th:value="${bulkMetadataUpdateRequest.getMetadataValue()}" /></td>
+															<td><input class="form-control" type="text" id="mdname" name="metadataName" placeholder="Enter Metadata Attribute" th:value="${bulkMetadataUpdateRequest.getMetadataName()}" /></td>
+															<td><input class="form-control" type="text" id="mdval" name="metadataValue" placeholder="Enter Metadata Value" th:value="${bulkMetadataUpdateRequest.getMetadataValue()}" /></td>
 														</tr></tbody>
 													</table>
 													<div class="col-sm-offset-2 col-sm-10" align="right" >
