HPCDATAMGM-1791: Every time user selects all from detailed search result, display total size.

--- a/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
@@ -329,6 +329,7 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
             selectedRowsData = $scope.selectedRows;
             $("#totalSize").val(totalSize);
             $("#totalSizeDisplay").text(totalSize.toString() + " (" + formatBytes(totalSize, 1) + ")");
+            $("#totalSizeLabel").show();
           });
       
 	      gridApi.core.on.columnVisibilityChanged($scope, function(col) {
