--- a/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
@@ -335,6 +335,7 @@
             selectedRowsData = $scope.selectedRows;
             $("#totalSize").val(totalSize);
             $("#totalSizeDisplay").text(totalSize.toString() + " (" + formatBytes(totalSize, 1) + ")");
+            $("#totalSizeLabel").show();
           });
           
           gridApi.core.on.columnVisibilityChanged($scope, function(col) {
